test/com/facebook/buck/parser/testdata/syntax_error/correct/BUCK.fixture
java_library(name = "correct")
